--- a/src/components/ProfileCard/ProfileCards.scss
+++ b/src/components/ProfileCard/ProfileCards.scss
@@ -24,7 +24,7 @@
         padding-top: 1rem;
         width: 100%;
         height: 90%;
-        grid-template-columns: repeat(5, 1fr ); /* 1 column */
+        grid-template-columns: repeat(5, minmax(0, 1fr)); /* 1 column */
     }
 }
 
